# compiler-flag-optimization

./: .gitignore  README.md  benchmark.py  download_benchmark.sh  flag_selection.py  gcc_opts.txt  gcc_opts_20.txt  gcc_opts_30.txt  gcc_opts_impact.txt  gcc_search_space.txt  gcc_search_space_asm.txt  gcc_search_space_doc.txt  generate_samples.py  main.py  run_benchmark.py  stability_check.py  stability_check_parallel.py  stability_check_samples.py  stability_check_samples_from_file.py  tune_bocs.py  tune_gcc.py
BOCS/: BOCS.py  LinReg.py  example_bqp.py
analysis/: analysis.py  evaluation_20.ipynb  evaluation_20_100.ipynb  evaluation_20_validation.ipynb  evaluation_98.ipynb  plot_backup.py  result_1.ipynb  result_2.ipynb  simulation.ipynb  simulation_validation.ipynb
cDatasets/: download.sh  install.sh
compiler_opt/: __init__.py  active_tuner.py  base_tuner.py  benchmark.py  bocs_tuner.py  evaluator.py  experiment.py  flag_info.py  fourier_tuner.py  hadamard_tuner.py  mono_tuner.py  powerset.py  random_tuner.py  samples.py  simulator.py  srtuner.py
gcc_flags/: all_flags_doc.txt  all_flags_doc_small.txt  all_flags_help.txt  flags_impact.txt  search_space_20.txt  search_space_30.txt  search_space_98.txt
simulation_0/: n_020_budget_0100_00.csv  n_020_budget_0100_00.txt  n_020_budget_0100_00_cbench-automotive-bitcount:number-0001:_Fourier.txt  n_020_budget_0100_00_cbench-automotive-qsort1:cdataset-qsort-0001:_Fourier.txt  n_020_budget_0100_00_cbench-automotive-susan:image-pgm-0001:corners_Fourier.txt  n_020_budget_0100_00_cbench-automotive-susan:image-pgm-0001:edges_Fourier.txt  n_020_budget_0100_00_cbench-automotive-susan:image-pgm-0001:smoothing_Fourier.txt  n_020_budget_0100_00_cbench-consumer-jpeg-c:image-ppm-0001:_Fourier.txt  n_020_budget_0100_00_cbench-consumer-jpeg-d:image-jpeg-0001:_Fourier.txt  n_020_budget_0100_00_cbench-consumer-tiff2bw:image-tiff-0001:_Fourier.txt  n_020_budget_0100_00_cbench-consumer-tiff2dither:image-tiff-0001-bw:_Fourier.txt  n_020_budget_0100_00_cbench-consumer-tiff2rgba:image-tiff-0001:_Fourier.txt  n_020_budget_0100_00_cbench-network-dijkstra:cdataset-dijkstra-0001:_Fourier.txt  n_020_budget_0100_00_cbench-network-patricia:cdataset-patricia-0001:_Fourier.txt  n_020_budget_0100_00_cbench-telecom-adpcm-c:pcm-0001:_Fourier.txt  n_020_budget_0100_00_cbench-telecom-adpcm-d:adpcm-0001:_Fourier.txt  n_020_budget_0100_00_cbench-telecom-crc32:pcm-0001:_Fourier.txt  n_020_budget_0100_00_cbench-telecom-gsm:au-0001:_Fourier.txt  n_020_budget_0100_00_validate_score.csv  n_020_budget_0200_00.csv  n_020_budget_0200_00.txt  n_020_budget_0200_00_cbench-automotive-bitcount:number-0001:_Fourier.txt  n_020_budget_0200_00_cbench-automotive-qsort1:cdataset-qsort-0001:_Fourier.txt  n_020_budget_0200_00_cbench-automotive-susan:image-pgm-0001:corners_Fourier.txt  n_020_budget_0200_00_cbench-automotive-susan:image-pgm-0001:edges_Fourier.txt  n_020_budget_0200_00_cbench-automotive-susan:image-pgm-0001:smoothing_Fourier.txt  n_020_budget_0200_00_cbench-consumer-jpeg-c:image-ppm-0001:_Fourier.txt  n_020_budget_0200_00_cbench-consumer-jpeg-d:image-jpeg-0001:_Fourier.txt  n_020_budget_0200_00_cbench-consumer-tiff2bw:image-tiff-0001:_Fourier.txt  n_020_budget_0200_00_cbench-consumer-tiff2dither:image-tiff-0001-bw:_Fourier.txt  n_020_budget_0200_00_cbench-consumer-tiff2rgba:image-tiff-0001:_Fourier.txt  n_020_budget_0200_00_cbench-network-dijkstra:cdataset-dijkstra-0001:_Fourier.txt  n_020_budget_0200_00_cbench-network-patricia:cdataset-patricia-0001:_Fourier.txt  n_020_budget_0200_00_cbench-telecom-adpcm-c:pcm-0001:_Fourier.txt  n_020_budget_0200_00_cbench-telecom-adpcm-d:adpcm-0001:_Fourier.txt  n_020_budget_0200_00_cbench-telecom-crc32:pcm-0001:_Fourier.txt  n_020_budget_0200_00_cbench-telecom-gsm:au-0001:_Fourier.txt  n_020_budget_0200_00_validate_score.csv  n_020_budget_0300_00.csv  n_020_budget_0300_00.txt  (+1670 more)
simulation_1e-2/: n_020_budget_0100_00.csv  n_020_budget_0100_00.txt  n_020_budget_0100_00_cbench-automotive-bitcount:number-0001:_Fourier.txt  n_020_budget_0100_00_cbench-automotive-qsort1:cdataset-qsort-0001:_Fourier.txt  n_020_budget_0100_00_cbench-automotive-susan:image-pgm-0001:corners_Fourier.txt  n_020_budget_0100_00_cbench-automotive-susan:image-pgm-0001:edges_Fourier.txt  n_020_budget_0100_00_cbench-automotive-susan:image-pgm-0001:smoothing_Fourier.txt  n_020_budget_0100_00_cbench-consumer-jpeg-c:image-ppm-0001:_Fourier.txt  n_020_budget_0100_00_cbench-consumer-jpeg-d:image-jpeg-0001:_Fourier.txt  n_020_budget_0100_00_cbench-consumer-tiff2bw:image-tiff-0001:_Fourier.txt  n_020_budget_0100_00_validate_score.csv  (+1699 more)
sparse-dsft/cpp/: .gitignore  CMakeLists.txt  README.md  pybindings.cpp  readwrite.py  runmany.sh  setup-cpp.py
sparse-dsft/cpp/src/: baseline.cpp  baseline.hpp  common.cpp  common.hpp  correlation.cpp  correlation.hpp  dependencygraph.cpp  dependencygraph.hpp  export.cpp  export.hpp  lasso.cpp  lasso.hpp  main.cpp  posettp.cpp  posettp.hpp  structset.cpp  structset.hpp  threadpool.cpp  threadpool.hpp  threadpool2.cpp
swht/: CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in  manual_cs_providers.md  setup.py  setup.sh
swht/include/: CMakeLists.txt  build_info.h.in  debugging.h  profiling.h  random_function.py  random_signal.cpp  random_signal.h  timing.h
swht/include/fastwht/: CMakeLists.txt  hadamard.cpp
swht/include/reed-solomon/: CMakeLists.txt  reed-solomon.cpp  reed-solomon.h
swht/src/: CMakeLists.txt  swht.cpp  swht.h  swht_basic.cpp  swht_kernel.h  swht_robust.cpp
swht/src/cs_providers/: CMakeLists.txt  cs_factory.cpp  cs_factory.h  finite_field_cs.h  naive_cs.cpp  naive_cs.h  random_binning_cs.cpp  random_binning_cs.h  reed_solomon_cs.cpp  reed_solomon_cs.h
swht/src/python_module/: CMakeLists.txt  __init__.py  __init__.pyi  swhtmodule.cpp
swht/src/utils/: CMakeLists.txt  Hasher.cpp  Hasher.h  global_constants.h  linear_algebra.h
swht/tests/: CMakeLists.txt  test_linear_algebra.cpp  test_reed_solomon.cpp  test_swht_naive.cpp  test_swht_randbin.cpp  test_swht_reed_solomon.cpp  test_swht_robust.cpp
(+54160 files in other folders)
